monticore-generator/src/test/resources/cocos/invalid/A0112/A0112b.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A0112;

grammar A0112b {

  Foo = "foo";

  interface Bar = "bar";

  interface Bar = "foo";

}
